modifying the customer_register.php & adding payment page

--- a/styles/style.css
+++ b/styles/style.css
@@ -200,4 +200,13 @@ footer, header, hgroup, menu, nav, section {
          clear: both;
          background: grey;
          margin: auto;
-       }0
+       }
+#register
+{
+background: skyblue;
+}
+
+#customer_login
+{
+  background-color:pink;
+}
